--- a/templates/log4j2.xml
+++ b/templates/log4j2.xml
@@ -1,5 +1,6 @@
 <Configuration status="WARN">
 	<Properties>
+		<Property name="log.dir">${sys:log.dir:-/logs}</Property>
 		<Property name="console.style.thread">FATAL=BG_#8B0000 #FFFFFF bold, WARN=#C75C00 bold, DEBUG=black, TRACE=bright_black</Property>
 		<Property name="console.style.message">WARN=#C75C00, INFO=black, DEBUG=#6E6E6E, TRACE=bright_black</Property>
 	</Properties>
@@ -8,7 +9,7 @@
 		<Console name="console" target="SYSTEM_OUT">
 			<PatternLayout pattern="%d{HH:mm:ss.SSS} %highlight{[%t]}{${console.style.thread}} (%F:%L) - %highlight{%m%n}{${console.style.message}}" />
 		</Console>
-		<RollingFile name="rollingFile" fileName="/logs/stw-game-automation.log" filePattern="/logs/stw-game-automation-%i.log" append="false">
+		<RollingFile name="rollingFile" fileName="${log.dir}/stw-game-automation.log" filePattern="${log.dir}/stw-game-automation-%i.log" append="false">
 			<PatternLayout pattern="%d{HH:mm:ss.SSS} %-5p [%t] %c{1.}:%L - %m%n" />
 			<Policies>
 				<SizeBasedTriggeringPolicy size="100MB" />
